# saasaparilla.notification

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile  rust-toolchain.toml
architectural-decision-records/dependencies/: 0001-kafka.md  0002-local-testing.md
architecture/: High Level Architecture.md  diagrams.d2
architecture/architectural-decision-records/: 0002-local-testing.md
crates/common/: Cargo.toml
crates/common/src/types/: notification.rs
crates/common/src/util/: settings.rs
crates/director/: Cargo.toml  config.toml
crates/director/src/: main.rs
crates/distributor/: Cargo.toml  config.toml
crates/distributor/src/: main.rs
crates/receiver/: Cargo.toml  config.toml
crates/receiver/src/: lib.rs  main.rs  settings.rs
crates/receiver/src/daos/: kafka.rs  mod.rs
crates/receiver/src/paths/: mod.rs  notification.rs
crates/receiver/src/routes/: mod.rs  notification.rs
crates/receiver/src/types/: mod.rs  notification.rs
crates/receiver/tests/: main.rs  mod.rs
crates/receiver/tests/integration_tests/: health.rs
crates/receiver/tests/integration_tests/api/v1/: mod.rs  notification.rs
docker/: Dockerfile  Dockerfile.dockerignore
kind/: TODO.md  cluster.yaml  flux-install.yaml  genkeys.sh  git-server.yaml
kind/_default/: hosts.toml
kind/bootstrap/: flux-install.yaml  flux-manifests.yaml  git-server.yaml  kustomization.yaml
kind/flux-manifests/: addons.yaml  kustomization.yaml
kind/flux-manifests/addons/: _bootstrap.yaml  bitnami-kafka.yaml  bitnami-postgresql.yaml  bitnami-valkey.yaml  kafka-ui.yaml  kustomization.yaml  metrics-server.yaml  nginx-ingress-controller.yaml
kind/flux-manifests/apps/: _bootstrap.yaml  kustomization.yaml  receiver.yaml  saasaparilla-notification.yaml
kind/flux-manifests/infra/: _bootstrap.yaml  bitnami-kafka.yaml  bitnami-postgresql.yaml  bitnami-valkey.yaml  kafka-ui.yaml  kustomization.yaml
timoni/: saasaparilla.notification.bundle.cue
