[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7.4"
config = "0.14.0"
eyre = "0.6.8"
http-body-util = "0.1.0"
kafka = "0.10.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
url = "2.4.1"

# local dependencies
saasaparilla_notification_common = { path = "crates/common" }