[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7.4"
config = "0.14.0"
eyre = "0.6.8"
http-body-util = "0.1.0"
kafka = "0.10.0"
once_cell = "1.18.0"
openssl = { version = "0.10.66", features = ["vendored"] } #https://users.rust-lang.org/t/sigsegv-with-program-linked-against-openssl-in-an-alpine-container/52172/4
reqwest = { version = "0.12.5", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
url = "2.4.1"

# local dependencies
saasaparilla_notification_common = { path = "crates/common" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Nyefan"]
homepage = "https://github.com/SaaSaparilla/saasaparilla.notification"
repository = "https://github.com/SaaSaparilla/saasaparilla.notification"
readme = "README.md"