[package]
name = "saasaparilla_notification_common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "a crate containing the common types and utilities for the saasaparilla_notification project"
homepage = "https://github.com/SaaSaparilla/saasaparilla.notification"
repository = "https://github.com/SaaSaparilla/saasaparilla.notification"
readme = "../../README.md"

[dependencies]
eyre.workspace = true
config.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true