[package]
name = "saasaparilla_notification_common"
description = "a crate containing the common types and utilities for the saasaparilla_notification project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
eyre.workspace = true
config.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true