[package]
name = "saasaparilla_notification_common"
description = "a crate containing the common types and utilities for the saasaparilla_notification project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
config.workspace = true
fastrace.workspace = true
serde.workspace = true
