[package]
name = "saasaparilla-notification-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
config.workspace = true
eyre.workspace = true
kafka.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

# local dependencies
saasaparilla_notification_common.workspace = true
openssl = {features = ["vendored"]} #https://users.rust-lang.org/t/sigsegv-with-program-linked-against-openssl-in-an-alpine-container/52172/4

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
tower.workspace = true
