[package]
name = "saasaparilla-notification-receiver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
config.workspace = true
eyre.workspace = true
kafka.workspace = true
once_cell.workspace = true
openssl.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

# local dependencies
saasaparilla_notification_common.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
tower.workspace = true
