[package]
name = "saasaparilla-notification-receiver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
fastrace.workspace = true
fastrace-poem.workspace = true
kafka.workspace = true
openssl.workspace = true
poem.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# local dependencies
saasaparilla_notification_common.workspace = true

[dev-dependencies]
poem = { version = "3.1.8", features = ["test"]}
serde_json.workspace = true
